# surge-gw

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-image.yml
docs/superpowers/plans/: 2026-06-21-surge-gw-plan1-conversion-core.md  2026-06-22-surge-gw-plan2-remote-resources.md  2026-06-22-surge-gw-plan3-runtime.md  2026-06-22-surge-gw-plan4-deployment.md  2026-06-23-domain-provider-wildcard.md  2026-06-23-ip-rule-no-resolve.md  2026-06-23-surge-endpoint-nudge-refresh.md
docs/superpowers/specs/: 2026-06-21-surge-gw-design.md  2026-06-22-surge-gw-plan3-runtime-design.md  2026-06-22-surge-gw-plan4-deployment-design.md  (+3 more)
smoke/: README.md  plan3_runtime.md  plan4_container.md  socks_logger.py
src/surge_gw/: __main__.py  assemble.py  bypass.py  cache.py  config.py  fetcher.py  geosite.py  groups.py  http_server.py  mihomo_config.py  mihomo_manager.py  models.py  naming.py  nodes.py  orchestrator.py  port_store.py  ports.py  providers.py  proxies.py  reconcile.py  refresh_policy.py  rules.py  surge_config.py  urls.py
tests/: test_assemble.py  test_bypass.py  test_cache.py  test_config.py  test_entrypoint.py  test_fetcher.py  test_geosite.py  test_groups.py  test_http_server.py  test_mihomo_config.py  test_mihomo_manager.py  test_models_import.py  test_naming.py  test_nodes.py  test_orchestrator.py  test_port_store.py  test_ports.py  test_providers.py  test_proxies.py  test_reconcile.py  test_refresh_policy.py  test_rules.py  test_surge_config.py  test_urls.py
